// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`스냅샷 > 고객 요청사항만 있는 경우 구조가 스냅샷과 일치한다 1`] = `
<div
  class="lg:col-span-2 bg-white shadow rounded-lg p-6"
>
  <h2
    class="text-lg font-semibold text-gray-900 mb-3"
  >
    기업 정보
  </h2>
  <dl>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-building2 lucide-building-2 h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 12h4"
        />
        <path
          d="M10 8h4"
        />
        <path
          d="M14 21v-3a2 2 0 0 0-4 0v3"
        />
        <path
          d="M6 10H4a2 2 0 0 0-2 2v7a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-2"
        />
        <path
          d="M6 21V5a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v16"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        회사명
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        테스트기업
      </dd>
    </div>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-factory h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 16h.01"
        />
        <path
          d="M16 16h.01"
        />
        <path
          d="M3 19a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8.5a.5.5 0 0 0-.769-.422l-4.462 2.844A.5.5 0 0 1 15 10.5v-2a.5.5 0 0 0-.769-.422L9.77 10.922A.5.5 0 0 1 9 10.5V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2z"
        />
        <path
          d="M8 16h.01"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        업종
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        건설/부동산
      </dd>
    </div>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        규모
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        중소기업
      </dd>
    </div>
  </dl>
  <hr
    class="my-2 border-gray-100"
  />
  <dl>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        담당자
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        홍길동
      </dd>
    </div>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-mail h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
        />
        <rect
          height="16"
          rx="2"
          width="20"
          x="2"
          y="4"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        연락처
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        hong@test.com
      </dd>
    </div>
  </dl>
  <div
    class="mt-3 pt-3 border-t border-gray-100"
  >
    <div
      class="flex items-center gap-2 mb-1.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-message-square-text h-3.5 w-3.5 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
        />
        <path
          d="M7 11h10"
        />
        <path
          d="M7 15h6"
        />
        <path
          d="M7 7h8"
        />
      </svg>
      <span
        class="text-xs font-medium text-gray-500"
      >
        고객 요청사항
      </span>
    </div>
    <p
      class="text-sm text-gray-700 whitespace-pre-wrap rounded-md bg-gray-50 px-3 py-2"
    >
      AI 도입 시급합니다
    </p>
  </div>
</div>
`;

exports[`스냅샷 > 모든 선택 필드가 있는 경우 구조가 스냅샷과 일치한다 1`] = `
<div
  class="lg:col-span-2 bg-white shadow rounded-lg p-6"
>
  <h2
    class="text-lg font-semibold text-gray-900 mb-3"
  >
    기업 정보
  </h2>
  <dl>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-building2 lucide-building-2 h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 12h4"
        />
        <path
          d="M10 8h4"
        />
        <path
          d="M14 21v-3a2 2 0 0 0-4 0v3"
        />
        <path
          d="M6 10H4a2 2 0 0 0-2 2v7a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-2"
        />
        <path
          d="M6 21V5a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v16"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        회사명
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        테스트기업
      </dd>
    </div>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-factory h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 16h.01"
        />
        <path
          d="M16 16h.01"
        />
        <path
          d="M3 19a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8.5a.5.5 0 0 0-.769-.422l-4.462 2.844A.5.5 0 0 1 15 10.5v-2a.5.5 0 0 0-.769-.422L9.77 10.922A.5.5 0 0 1 9 10.5V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2z"
        />
        <path
          d="M8 16h.01"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        업종
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        건설/부동산
      </dd>
    </div>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        규모
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        중소기업
      </dd>
    </div>
  </dl>
  <hr
    class="my-2 border-gray-100"
  />
  <dl>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        담당자
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        홍길동
      </dd>
    </div>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-mail h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
        />
        <rect
          height="16"
          rx="2"
          width="20"
          x="2"
          y="4"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        연락처
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        hong@test.com
      </dd>
    </div>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-phone h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.832 16.568a1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 6.392 6.384"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        전화
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        010-1234-5678
      </dd>
    </div>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-map-pin h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
        />
        <circle
          cx="12"
          cy="10"
          r="3"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        주소
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        서울시 강남구
      </dd>
    </div>
  </dl>
  <div
    class="mt-3 pt-3 border-t border-gray-100"
  >
    <div
      class="flex items-center gap-2 mb-1.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-message-square-text h-3.5 w-3.5 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
        />
        <path
          d="M7 11h10"
        />
        <path
          d="M7 15h6"
        />
        <path
          d="M7 7h8"
        />
      </svg>
      <span
        class="text-xs font-medium text-gray-500"
      >
        고객 요청사항
      </span>
    </div>
    <p
      class="text-sm text-gray-700 whitespace-pre-wrap rounded-md bg-gray-50 px-3 py-2"
    >
      AI 도입 시급합니다
    </p>
  </div>
</div>
`;

exports[`스냅샷 > 필수 정보만 있는 경우 구조가 스냅샷과 일치한다 1`] = `
<div
  class="lg:col-span-2 bg-white shadow rounded-lg p-6"
>
  <h2
    class="text-lg font-semibold text-gray-900 mb-3"
  >
    기업 정보
  </h2>
  <dl>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-building2 lucide-building-2 h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 12h4"
        />
        <path
          d="M10 8h4"
        />
        <path
          d="M14 21v-3a2 2 0 0 0-4 0v3"
        />
        <path
          d="M6 10H4a2 2 0 0 0-2 2v7a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-2"
        />
        <path
          d="M6 21V5a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v16"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        회사명
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        테스트기업
      </dd>
    </div>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-factory h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 16h.01"
        />
        <path
          d="M16 16h.01"
        />
        <path
          d="M3 19a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8.5a.5.5 0 0 0-.769-.422l-4.462 2.844A.5.5 0 0 1 15 10.5v-2a.5.5 0 0 0-.769-.422L9.77 10.922A.5.5 0 0 1 9 10.5V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2z"
        />
        <path
          d="M8 16h.01"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        업종
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        건설/부동산
      </dd>
    </div>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        규모
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        중소기업
      </dd>
    </div>
  </dl>
  <hr
    class="my-2 border-gray-100"
  />
  <dl>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        담당자
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        홍길동
      </dd>
    </div>
    <div
      class="flex items-center gap-3 py-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-mail h-4 w-4 shrink-0 text-gray-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
        />
        <rect
          height="16"
          rx="2"
          width="20"
          x="2"
          y="4"
        />
      </svg>
      <dt
        class="w-14 shrink-0 text-sm text-gray-500"
      >
        연락처
      </dt>
      <dd
        class="text-base font-medium text-gray-900 truncate"
      >
        hong@test.com
      </dd>
    </div>
  </dl>
</div>
`;
